apps/03-security/authentik/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: auth
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: networking-redirect-scheme@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: authentik.test.truxonline.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik
            port:
              number: 9000
  tls:
  - hosts:
    - authentik.test.truxonline.com
    secretName: authentik-tls
